# SparseStrips

./: .gitattributes  .gitignore  .gitmodules  BENCHMARKS.md  README.md  build.ps1  build.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: API_COVERAGE.md  BENCHMARKS_SUMMARY.md  FFI_DESIGN.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  STATUS.md  api-coverage-v0.0.4.md  ffi-interop-guidelines.md  implementation-plan-missing-apis.md  native-build.md  vello-hybrid-bindings-plan.md  vello_cpu_recording_api_plan.md
docs/perf/: BENCHMARKS_SUMMARY.md  BENCHMARK_ANALYSIS.md  BENCHMARK_METHODOLOGY.md  CONTEXT_CREATION_OPTIMIZATION.md  MANAGED_INTEROP_PERFORMANCE_REVIEW.md  MICROBENCHMARK_ANALYSIS.md  MT_INVESTIGATION.md  OVERHEAD_BENCHMARKS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  WRAPPER_OVERHEAD_ANALYSIS.md
docs/tests/: interop-testing-plan.md  native-font-fixture.md  native-safety-followups.md
dotnet/: Directory.Build.props  Vello.sln
dotnet/Vello.Avalonia/: Vello.Avalonia.csproj
dotnet/Vello.Benchmarks/: ApiBenchmarks.cs  ComplexSceneBenchmarks.cs  Program.cs  SkiaSharpApiBenchmarks.cs  (+3 more)
rust_api_bench/: Cargo.toml
rust_api_bench/benches/: api_benchmark.rs  overhead_benchmark.rs
scripts/: build-linux.sh  build-macos.sh  build-wasm.sh  build-windows.ps1  run-integration.sh
vello_cpu_ffi/: Cargo.toml  build.rs  cbindgen.toml
vello_cpu_ffi/src/: context.rs  error.rs  image.rs  lib.rs  marshaling_tests.rs  mask.rs  path.rs  pixmap.rs  recording.rs  text.rs  types.rs  utils.rs
(+121 files in other folders)
